fix-sequence-info-text-alignment

--- a/src/components/Sequence/atoms/SequenceInfo/SequenceInfo.module.css
+++ b/src/components/Sequence/atoms/SequenceInfo/SequenceInfo.module.css
@@ -103,7 +103,7 @@
         width: 100%;
     }
     .text__first {
-        text-align: right;
+        text-align: left;
         width: 408px;
         align-self: end;
     }
